system/traefik/templates/argo-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.simonmalm.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argo.local.simonmalm.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80

  tls:
    secretName: simonmalm-com-tls
