system/traefik/templates/ceph-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ceph
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph.simonmalm.com`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 7000
    - match: Host(`ceph.local.simonmalm.com`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 7000

  tls:
    secretName: simonmalm-com-tls
